Fixed framerate bug - uses constant timestep that is invariant of actual frame rate. This helps stabilize Newton's method of approximating the differential equation for planetary motion.